# example-native-api-rs

./: Cargo.toml  README.md
src/: export_functions.rs  interface.rs  lib.rs  my_add_in.rs
src/add_in/: mod.rs
src/ffi/: connection.rs  init_base.rs  lang_extender.rs  memory_manager.rs  mod.rs  provided_types.rs  string_utils.rs  types.rs  utils.rs
src/my_add_in/: func.rs  mod.rs  props.rs
