[package]
name = "native_api_1c"
version = "0.1.0"
edition = "2021"

# from https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
utf16_lit = "2.0"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
